# locally

./: .gitignore  README.md  main.py  pip_show.txt  pyproject.toml  requirements.txt
app/: main.py
app/cli/: app.py
app/config/: settings.py
app/core/: agent.py  llm.py  tools.py
app/services/: detector.py  executor.py  repo.py
app/tools/: detect.py  git.py  install.py
app/utils/: logger.py
cli/: app.py
config/: env.py  settings.py
core/: agent.py  llm.py  tools.py
services/: detector.py  executor.py  repo.py
tests/: test.py
utils/: constants.py  logger.py
