[project]
name = "locally796"
version = "0.1.1"
description = "AI-powered CLI tool to setup GitHub repositories locally"
authors = [
    { name="Prathmesh Salunkhe", email="salunkheprathmesh0@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer",
    "rich",
    "gitpython",
    "langchain",
]

[project.scripts]
locally = "app.main:app"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]